--- a/index.html
+++ b/index.html
@@ -353,8 +353,9 @@
         <div class="accordion search-popup position-absolute z-1" id="accordionExample">
             <div class="accordion-item">
                 <h2 class="accordion-header">
-                    <button class="accordion-button py-2 px-15 justify-content-end" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                    <button class="accordion-button py-2 px-15 justify-content-end" type="button"
+                        data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true"
+                        aria-controls="collapseOne">
                         <div class="search-heading d-flex align-items-center justify-content-between">
                             <h6 class="search-heading-title fs-15 fw-semibold text-white mb-0">Search</h6>
                             <div class="search-heading-icon">
@@ -362,32 +363,190 @@
                                 <span class="mx-14"><img src="assets/image/search/Line 46.svg" alt="Line icon"></span>
                                 <span><img src="assets/image/search/Rectangle 1542.svg" alt="Rectangle icon"></span>
                             </div>
-                        </div> 
+                        </div>
                     </button>
                 </h2>
-                <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
+                <div id="collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                     <div class="accordion-body pt-9 px-15 pb-0">
-                        <ul class="nav nav-tabs justify-content-between mb-25 border-0 position-relative" id="myTab" role="tablist">
+                        <ul class="nav nav-tabs justify-content-between mb-25 border-0 position-relative" id="myTab"
+                            role="tablist">
                             <li class="nav-item" role="presentation">
-                              <button class="nav-link fs-15 fw-bold active py-0 px-19" id="home-tab" data-bs-toggle="tab" data-bs-target="#home-tab-pane" type="button" role="tab" aria-controls="home-tab-pane" aria-selected="true">Well</button>
+                                <button class="nav-link fs-15 fw-bold active py-0 px-19" id="home-tab"
+                                    data-bs-toggle="tab" data-bs-target="#home-tab-pane" type="button" role="tab"
+                                    aria-controls="home-tab-pane" aria-selected="true">Well</button>
                             </li>
                             <li class="nav-item" role="presentation">
-                              <button class="nav-link fs-15 fw-bold py-0 px-19" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profile-tab-pane" type="button" role="tab" aria-controls="profile-tab-pane" aria-selected="false">SWD</button>
+                                <button class="nav-link fs-15 fw-bold py-0 px-19" id="profile-tab" data-bs-toggle="tab"
+                                    data-bs-target="#profile-tab-pane" type="button" role="tab"
+                                    aria-controls="profile-tab-pane" aria-selected="false">SWD</button>
                             </li>
                             <div class="search-input position-absolute">
-                                <input type="text" class="form-control bg-white text-center fs-20 fw-bold" placeholder="Search">
+                                <input type="text" class="form-control bg-white text-center fs-20 fw-bold"
+                                    placeholder="Search">
                             </div>
-                          </ul>
-                          <div class="tab-content" id="myTabContent">
-                            <div class="tab-pane fade show active bg-white" id="home-tab-pane" role="tabpanel" aria-labelledby="home-tab" tabindex="0">Well</div>
-                            <div class="tab-pane fade bg-white" id="profile-tab-pane" role="tabpanel" aria-labelledby="profile-tab" tabindex="0">SWD</div>
-                          </div>
+                        </ul>
+                        <div class="tab-content" id="myTabContent">
+                            <div class="tab-pane fade show active bg-white" id="home-tab-pane" role="tabpanel"
+                                aria-labelledby="home-tab" tabindex="0">
+                                <div class="search-map">
+                                    <iframe class='w-100 h-100'
+                                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d238133.18800900166!2d72.65747318239129!3d21.159120355102836!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be04e59411d1563%3A0xfe4558290938b042!2sSurat%2C%20Gujarat!5e0!3m2!1sen!2sin!4v1745177875945!5m2!1sen!2sin"
+                                        style="border:0;" allowfullscreen="" loading="lazy"
+                                        referrerpolicy="no-referrer-when-downgrade"></iframe>
+                                </div>
+                                <div class="search-body-border position-relative">
+                                    <span class="bg-white position-absolute d-inline-block"></span>
+                                </div>
+                                <div class="search-item-list">
+                                    <div
+                                        class="search-item d-flex align-items-center justify-content-between ps-13 pe-20 py-9">
+                                        <h5 class="search-item-title text-primary fs-20 fw-bold mb-0 text-center">
+                                            <u>Meddie15-22 #1H</u> <span
+                                                class="d-block text-black fs-13 fw-bold">Wolla-Pipeline</span>
+                                        </h5>
+                                        <p class="search-item-public text-black fs-8 fw-bold text-center mb-0">Kraken
+                                        </p>
+                                        <button
+                                            class="btn search-item-btn text-white fs-15 fw-semibold py-2 px-13 border-0">Select</button>
+                                    </div>
+                                    <div
+                                        class="search-item d-flex align-items-center justify-content-between ps-13 pe-20 py-9">
+                                        <h5 class="search-item-title text-primary fs-20 fw-bold mb-0 text-center">
+                                            <u>Rose Henley 16-21 #1H</u> <span
+                                                class="d-block text-black fs-13 fw-bold">Woll-Pipeline</span>
+                                        </h5>
+                                        <p class="search-item-public text-black fs-8 fw-bold text-center mb-0">Kraken
+                                        </p>
+                                        <button
+                                            class="btn search-item-btn text-white fs-15 fw-semibold py-2 px-13 border-0">Select</button>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="tab-pane fade bg-white" id="profile-tab-pane" role="tabpanel"
+                                aria-labelledby="profile-tab" tabindex="0">
+                                <div class="search-body-border position-relative">
+                                    <span class="bg-white position-absolute d-inline-block"></span>
+                                </div>
+                                <div class="search-item-list">
+                                    <div
+                                        class="search-item d-flex align-items-center justify-content-between ps-13 pe-20 py-9">
+                                        <span class="d-inline-block search-item-selected"></span>
+                                        <h5 class="search-item-title text-primary fs-20 fw-bold mb-0 text-center">
+                                            <u>Nelson</u> <span
+                                                class="d-block text-black fs-13 fw-bold">Production-Flowback</span>
+                                        </h5>
+                                        <p class="search-item-public fs-10 fw-bold text-danger text-center mb-0">Public
+                                            <span class="text-black fs-8 fw-bold d-block">Henry Hill</span>
+                                        </p>
+                                        <button
+                                            class="btn search-item-btn text-white fs-15 fw-semibold py-2 px-13 border-0">Select</button>
+                                    </div>
+                                    <div
+                                        class="search-item d-flex align-items-center justify-content-between ps-13 pe-20 py-9">
+                                        <span class="d-inline-block search-item-selected"></span>
+                                        <h5 class="search-item-title text-primary fs-20 fw-bold mb-0 text-center">
+                                            <u>Nelson</u> <span class="d-block text-black fs-13 fw-bold">Dread
+                                                Pirate</span>
+                                        </h5>
+                                        <p class="search-item-public fs-10 fw-bold text-danger text-center mb-0">Private
+                                            <span class="text-black fs-8 fw-bold d-block">Kraken</span>
+                                        </p>
+                                        <button
+                                            class="btn search-item-btn text-white fs-15 fw-semibold py-2 px-13 border-0">Select</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
     <!-- main End -->
+
+    <!-- Contact Sidebar start -->
+    <div class="contact-sidebar pt-30 px-30 pb-20 position-absolute bg-white">
+        <div class="contact-search mb-27 position-relative">
+            <input type="text" class="form-control py-5 px-25 fs-17 fw-bold" placeholder="Search">
+            <span class="contact-search-icon position-absolute"><img src="assets/image/contact-sidebar/search-icon.svg"
+                    alt="Search icon"></span>
+        </div>
+        <div class="contact-item-list">
+            <div class="contact-item mb-10">
+                <div class="contact-item-header mb-10 d-flex align-items-center justify-content-between ps-32 pe-15">
+                    <h5 class="contact-item-title fs-20 fw-bold text-primary mb-0">Company Drivers</h5>
+                    <span class="contact-add-icon"><img src="assets/image/contact-sidebar/add-icon.svg"
+                            alt="Add icon"></span>
+                </div>
+                <div class="contact-item-box">
+                    <div class="contact-box-item d-flex align-items-center position-relative pb-12 mb-21">
+                        <span class="d-inline-block search-item-selected me-17 mt-0"></span>
+                        <h5 class="fs-20 fw-bold text-primary mb-0">John Vicol</h5>
+                        <hr class="position-absolute contact-box-line m-0">
+                    </div>
+                    <div class="contact-box-item d-flex align-items-center position-relative pb-12 mb-21">
+                        <span class="d-inline-block search-item-selected contact-red me-17 mt-0"></span>
+                        <h5 class="fs-20 fw-bold text-primary mb-0">Zack Sands</h5>
+                        <hr class="position-absolute contact-box-line m-0">
+                    </div>
+                    <div class="contact-box-item d-flex align-items-center position-relative pb-12">
+                        <span class="d-inline-block search-item-selected me-17 mt-0"></span>
+                        <h5 class="fs-20 fw-bold text-primary mb-0">Crude Dawg</h5>
+                        <hr class="position-absolute contact-box-line m-0">
+                    </div>
+                </div>
+            </div>
+            <div class="contact-item mb-10">
+                <div class="contact-item-header mb-10 d-flex align-items-center justify-content-between ps-32 pe-15">
+                    <h5 class="contact-item-title fs-20 fw-bold text-primary mb-0">Trucking Companies</h5>
+                    <span class="contact-add-icon"><img src="assets/image/contact-sidebar/add-icon.svg"
+                            alt="Add icon"></span>
+                </div>
+                <div class="contact-item-box">
+                    <div class="contact-box-item d-flex align-items-center position-relative pb-12 mb-21">
+                        <h5 class="fs-20 fw-bold text-primary mb-0">ZTS Trucking</h5>
+                        <span class="d-inline-block search-item-selected me-17 mt-0"></span>
+                        <hr class="position-absolute contact-box-line m-0">
+                    </div>
+                    <div class="contact-box-item d-flex align-items-center position-relative pb-12 mb-21">
+                        <h5 class="fs-20 fw-bold text-primary mb-0">JCV38 Corp</h5>
+                        <span class="d-inline-block search-item-selected contact-red me-17 mt-0"></span>
+                        <hr class="position-absolute contact-box-line m-0">
+                    </div>
+                    <div class="contact-box-item d-flex align-items-center position-relative pb-12">
+                        <h5 class="fs-20 fw-bold text-primary mb-0">LTS LLC</h5>
+                        <span class="d-inline-block search-item-selected me-17 mt-0"></span>
+                        <hr class="position-absolute contact-box-line m-0">
+                    </div>
+                </div>
+            </div>
+            <div class="contact-item mb-10">
+                <div class="contact-item-header mb-10 d-flex align-items-center justify-content-between ps-32 pe-15">
+                    <h5 class="contact-item-title fs-20 fw-bold text-primary mb-0">Company Drivers</h5>
+                    <span class="contact-add-icon"><img src="assets/image/contact-sidebar/add-icon.svg"
+                            alt="Add icon"></span>
+                </div>
+                <div class="contact-item-box">
+                    <div class="contact-box-item d-flex align-items-center position-relative pb-12 mb-21">
+                        <span class="d-inline-block search-item-selected me-17 mt-0"></span>
+                        <h5 class="fs-20 fw-bold text-primary mb-0">John Vicol</h5>
+                        <hr class="position-absolute contact-box-line m-0">
+                    </div>
+                    <div class="contact-box-item d-flex align-items-center position-relative pb-12 mb-21">
+                        <span class="d-inline-block search-item-selected contact-red me-17 mt-0"></span>
+                        <h5 class="fs-20 fw-bold text-primary mb-0">Zack Sands</h5>
+                        <hr class="position-absolute contact-box-line m-0">
+                    </div>
+                    <div class="contact-box-item d-flex align-items-center position-relative pb-12">
+                        <span class="d-inline-block search-item-selected me-17 mt-0"></span>
+                        <h5 class="fs-20 fw-bold text-primary mb-0">Crude Dawg</h5>
+                        <hr class="position-absolute contact-box-line m-0">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Contact Sidebar End -->
     <div class='bottom-0 footer-line position-absolute py-16 w-100 border border-2'></div>
 
     <!-- JavaScript Files -->
