account create modal input add Hardik_Maliya

--- a/home.html
+++ b/home.html
@@ -318,14 +318,18 @@
               <div class="d-flex justify-content-center align-items-center gap-40">
                 <div class="notemodaldouble-body w-100">
                   <p class="m-0 mb-4 mt-8 text-center text-primary fs-24 fw-bolder position-relative"><span class="contact-add-icon d-inline-block position-absolute start-0 top-50 translate-middle-y"><img src="assets/image/contact-sidebar/add-icon.svg" alt="Add icon"></span> Click to add multiple </p>
-                  <div class="notesmodalbody notesmodal-adddispatch border border-radius-2 p-16 text-center">
-                    <p class="m-0 fs-14 fw-medium mb-8">For people already in the system</p>
-                    <button type="button" class="btn btn-modal-footer btn-adddispatch fs-14 m-0 mb-8 lh-1 py-10 px-24 fw-bold text-primary border">Search</button>
-                    <p class="m-0 fs-14 fw-medium mb-8">For people who haven't setup an account, <br> manually enter: </p>
-                    <button type="button" class="btn btn-modal-footer btn-adddispatch fs-14 m-0 mb-8 lh-1 py-10 px-24 fw-bold text-primary border">First Name</button>
-                    <button type="button" class="btn btn-modal-footer btn-adddispatch fs-14 m-0 mb-8 lh-1 py-10 px-24 fw-bold text-primary border">Last Name</button>
-                    <button type="button" class="btn btn-modal-footer btn-adddispatch fs-14 m-0 mb-8 lh-1 py-10 px-24 fw-bold text-primary border">Phone Number</button>
-                  </div>
+                  <form class="account-comany-form notesmodalbody notesmodal-adddispatch border border-radius-2 p-16 text-center">
+                    <p class="m-0 fs-14 fw-medium mb-14">For people already in the system</p>
+                    <input type="text" class="form-control mb-14 mx-auto fs-14 m-0 lh-1 py-10 px-24 fw-bold" id="search" placeholder="Search">
+                    <!-- <button type="button" class="btn btn-modal-footer btn-adddispatch fs-14 m-0 mb-8 lh-1 py-10 px-24 fw-bold text-primary border">Search</button> -->
+                    <p class="m-0 fs-14 fw-medium mb-14">For people who haven't setup an account, <br> manually enter: </p>
+                    <input type="text" class="form-control mb-14 mx-auto fs-14 m-0 lh-1 py-10 px-24 fw-bold" id="firstname" placeholder="First Name">
+                    <input type="text" class="form-control mb-14 mx-auto fs-14 m-0 lh-1 py-10 px-24 fw-bold" id="lastname" placeholder="Last Name">
+                    <input type="text" class="form-control mb-14 mx-auto fs-14 m-0 lh-1 py-10 px-24 fw-bold" id="phonenumber" placeholder="Phone Number">
+                    <!-- <button type="button" class="btn btn-modal-footer btn-adddispatch fs-14 m-0 mb-8 lh-1 py-10 px-24 fw-bold text-primary border">First Name</button> -->
+                    <!-- <button type="button" class="btn btn-modal-footer btn-adddispatch fs-14 m-0 mb-8 lh-1 py-10 px-24 fw-bold text-primary border">Last Name</button> -->
+                    <!-- <button type="button" class="btn btn-modal-footer btn-adddispatch fs-14 m-0 mb-8 lh-1 py-10 px-24 fw-bold text-primary border">Phone Number</button> -->
+                  </form>
                 </div>
                 <div class="notemodaldouble-body w-100">
                   <p class="m-0 mb-4 mt-8 text-center text-primary fs-24 fw-bolder">Invited</p>
@@ -357,14 +361,18 @@
               <div class="d-flex justify-content-center align-items-center gap-40">
                 <div class="notemodaldouble-body w-100">
                   <p class="m-0 mb-4 mt-8 text-center text-primary fs-24 fw-bolder position-relative"><span class="contact-add-icon d-inline-block position-absolute start-0 top-50 translate-middle-y"><img src="assets/image/contact-sidebar/add-icon.svg" alt="Add icon"></span> Click to add multiple </p>
-                  <div class="notesmodalbody notesmodal-adddispatch border border-radius-2 p-16 text-center">
-                    <p class="m-0 fs-14 fw-medium mb-8">For people already in the system</p>
-                    <button type="button" class="btn btn-modal-footer btn-adddispatch fs-14 m-0 mb-8 lh-1 py-10 px-24 fw-bold text-primary border">Search</button>
-                    <p class="m-0 fs-14 fw-medium mb-8">For people who haven't setup an account, <br> manually enter: </p>
-                    <button type="button" class="btn btn-modal-footer btn-adddispatch fs-14 m-0 mb-8 lh-1 py-10 px-24 fw-bold text-primary border">First Name</button>
-                    <button type="button" class="btn btn-modal-footer btn-adddispatch fs-14 m-0 mb-8 lh-1 py-10 px-24 fw-bold text-primary border">Last Name</button>
-                    <button type="button" class="btn btn-modal-footer btn-adddispatch fs-14 m-0 mb-8 lh-1 py-10 px-24 fw-bold text-primary border">Phone Number</button>
-                  </div>
+                  <form class="account-comany-form notesmodalbody notesmodal-adddispatch border border-radius-2 p-16 text-center">
+                    <p class="m-0 fs-14 fw-medium mb-14">For people already in the system</p>
+                    <input type="text" class="form-control mb-14 mx-auto fs-14 m-0 lh-1 py-10 px-24 fw-bold" id="search" placeholder="Search">
+                    <!-- <button type="button" class="btn btn-modal-footer btn-adddispatch fs-14 m-0 mb-8 lh-1 py-10 px-24 fw-bold text-primary border">Search</button> -->
+                    <p class="m-0 fs-14 fw-medium mb-14">For people who haven't setup an account, <br> manually enter: </p>
+                    <input type="text" class="form-control mb-14 mx-auto fs-14 m-0 lh-1 py-10 px-24 fw-bold" id="firstname" placeholder="First Name">
+                    <input type="text" class="form-control mb-14 mx-auto fs-14 m-0 lh-1 py-10 px-24 fw-bold" id="lastname" placeholder="Last Name">
+                    <input type="text" class="form-control mb-14 mx-auto fs-14 m-0 lh-1 py-10 px-24 fw-bold" id="phonenumber" placeholder="Phone Number">
+                    <!-- <button type="button" class="btn btn-modal-footer btn-adddispatch fs-14 m-0 mb-8 lh-1 py-10 px-24 fw-bold text-primary border">First Name</button> -->
+                    <!-- <button type="button" class="btn btn-modal-footer btn-adddispatch fs-14 m-0 mb-8 lh-1 py-10 px-24 fw-bold text-primary border">Last Name</button> -->
+                    <!-- <button type="button" class="btn btn-modal-footer btn-adddispatch fs-14 m-0 mb-8 lh-1 py-10 px-24 fw-bold text-primary border">Phone Number</button> -->
+                  </form>
                 </div>
                 <div class="notemodaldouble-body w-100">
                   <p class="m-0 mb-4 mt-8 text-center text-primary fs-24 fw-bolder">Invited</p>
@@ -396,14 +404,18 @@
               <div class="d-flex justify-content-center align-items-center gap-40">
                 <div class="notemodaldouble-body w-100">
                   <p class="m-0 mb-4 mt-8 text-center text-primary fs-24 fw-bolder position-relative"><span class="contact-add-icon d-inline-block position-absolute start-0 top-50 translate-middle-y"><img src="assets/image/contact-sidebar/add-icon.svg" alt="Add icon"></span> Click to add multiple </p>
-                  <div class="notesmodalbody notesmodal-adddispatch border border-radius-2 p-16 text-center">
-                    <p class="m-0 fs-14 fw-medium mb-8">For people already in the system</p>
-                    <button type="button" class="btn btn-modal-footer btn-adddispatch fs-14 m-0 mb-8 lh-1 py-10 px-24 fw-bold text-primary border">Search</button>
-                    <p class="m-0 fs-14 fw-medium mb-8">For people who haven't setup an account, <br> manually enter: </p>
-                    <button type="button" class="btn btn-modal-footer btn-adddispatch fs-14 m-0 mb-8 lh-1 py-10 px-24 fw-bold text-primary border">First Name</button>
-                    <button type="button" class="btn btn-modal-footer btn-adddispatch fs-14 m-0 mb-8 lh-1 py-10 px-24 fw-bold text-primary border">Last Name</button>
-                    <button type="button" class="btn btn-modal-footer btn-adddispatch fs-14 m-0 mb-8 lh-1 py-10 px-24 fw-bold text-primary border">Phone Number</button>
-                  </div>
+                  <form class="account-comany-form notesmodalbody notesmodal-adddispatch border border-radius-2 p-16 text-center">
+                    <p class="m-0 fs-14 fw-medium mb-14">For people already in the system</p>
+                    <input type="text" class="form-control mb-14 mx-auto fs-14 m-0 lh-1 py-10 px-24 fw-bold" id="search" placeholder="Search">
+                    <!-- <button type="button" class="btn btn-modal-footer btn-adddispatch fs-14 m-0 mb-8 lh-1 py-10 px-24 fw-bold text-primary border">Search</button> -->
+                    <p class="m-0 fs-14 fw-medium mb-14">For people who haven't setup an account, <br> manually enter: </p>
+                    <input type="text" class="form-control mb-14 mx-auto fs-14 m-0 lh-1 py-10 px-24 fw-bold" id="firstname" placeholder="First Name">
+                    <input type="text" class="form-control mb-14 mx-auto fs-14 m-0 lh-1 py-10 px-24 fw-bold" id="lastname" placeholder="Last Name">
+                    <input type="text" class="form-control mb-14 mx-auto fs-14 m-0 lh-1 py-10 px-24 fw-bold" id="phonenumber" placeholder="Phone Number">
+                    <!-- <button type="button" class="btn btn-modal-footer btn-adddispatch fs-14 m-0 mb-8 lh-1 py-10 px-24 fw-bold text-primary border">First Name</button> -->
+                    <!-- <button type="button" class="btn btn-modal-footer btn-adddispatch fs-14 m-0 mb-8 lh-1 py-10 px-24 fw-bold text-primary border">Last Name</button> -->
+                    <!-- <button type="button" class="btn btn-modal-footer btn-adddispatch fs-14 m-0 mb-8 lh-1 py-10 px-24 fw-bold text-primary border">Phone Number</button> -->
+                  </form>
                 </div>
                 <div class="notemodaldouble-body w-100">
                   <p class="m-0 mb-4 mt-8 text-center text-primary fs-24 fw-bolder">Invited</p>
