--- a/dashboard.html
+++ b/dashboard.html
@@ -217,8 +217,7 @@
         <div class='bottom-header-content d-inline-flex align-items-center justify-content-center gap-24'>
             <span class='bottom-header-title text-white fs-25 fw-bold text-center lh-sm'>Current <br>Jobs</span>
             <div class='d-flex flex-column align-items-center justify-content-center gap-10'>
-                <div
-                    class="bottom-header-top bg-white d-flex align-items-center justify-content-center gap-16 py-6 px-40">
+                <div class="bottom-header-top bg-white d-flex align-items-center justify-content-center gap-16 py-6 px-40">
                     <button class="btn btn-header-action border border-2 py-4 px-8 active" type="button">
                         <div class="d-flex gap-6 align-items-center justify-content-between">
                             <div class="header-action-duration position-relative">
@@ -358,7 +357,7 @@
     <div class="main-content position-relative">
         <div class="dashboard-btn-list bg-white border border-2 py-30 px-14 d-inline-flex flex-column gap-20 position-absolute top-0 end-0 mt-12 me-100">
             <button type="button" class="btn btn-listgroup border border-2 fw-bold fs-16 lh-1 py-10 px-18" data-bs-toggle="modal" data-bs-target="#jobbulletinbtnmodal">Bulletin</button>
-            <button type="button" class="btn btn-listgroup border border-2 fw-bold fs-16 lh-1 py-10 px-18">Drivers</button>
+            <button type="button" class="btn btn-listgroup border border-2 fw-bold fs-16 lh-1 py-10 px-18" data-bs-toggle="modal" data-bs-target="#jobdrivermodal">Drivers</button>
             <button type="button" class="btn btn-listgroup border border-2 fw-bold fs-16 lh-1 py-10 px-18">Manage</button>
             <button type="button" class="btn btn-listgroup border border-2 fw-bold fs-16 lh-1 py-10 px-18">Contacts</button>
         </div>
@@ -959,6 +958,7 @@
     <div class='bottom-0 footer-line position-absolute py-16 w-100 border border-2'></div>
 
 
+    <!-- bulletin modal End  -->
     <div class="modal fairbanks-jobmodal fade" id="jobbulletinbtnmodal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="jobbulletinbtnmodalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered">
           <div class="modal-content">
@@ -983,8 +983,8 @@
             </div>
           </div>
         </div>
-      </div>
-      <div class="modal fairbanks-jobmodal fade" id="postjobbulletinbtnmodal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="postjobbulletinbtnmodalLabel" aria-hidden="true">
+    </div>
+    <div class="modal fairbanks-jobmodal fade" id="postjobbulletinbtnmodal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="postjobbulletinbtnmodalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered">
           <div class="modal-content">
             <div class="modal-header justify-content-center position-relative border-0">
@@ -997,8 +997,182 @@
             </div>
           </div>
         </div>
-      </div>
-      <!-- bulletin modal End  -->
+    </div>
+    <!-- bulletin modal End  -->
+    <!-- Driver Btn modal End  -->
+    <div class="modal fairbanks-jobmodal fade" id="jobdrivermodal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="jobdrivermodalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+          <div class="modal-content">
+            <div class="modal-header justify-content-center position-relative border-0">
+              <h1 class="modal-title fs-35 fw-semibold fst-italic text-black lh-1 mb-0"><u>Manage Drivers</u></h1>
+              <button type="button" class="btn-close position-absolute top-0 end-0 m-0 mt-8 me-8" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body px-30">
+              <span class='d-block text-center text-danger fs-24 fw-bold'>What would you like <br> to do?</span>
+            </div>
+            <div class="modal-footer gap-50 border-0 justify-content-center pb-18 pt-0">
+              <button type="button" class="btn btn-modal-footer btn-modalnext m-0 fs-18 border-radius-4 lh-1 py-10 px-24 fw-bold text-white" data-bs-target="#invitejobdrivermodal" data-bs-toggle="modal">Invite</button>
+              <button type="button" class="btn btn-modal-footer btn-modalnext m-0 fs-18 border-radius-4 lh-1 py-10 px-24 fw-bold text-white">Cut</button>
+            </div>
+          </div>
+        </div>
+    </div>
+    <div class="modal modal-lg fairbanks-jobmodal fade" id="invitejobdrivermodal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="jobdrivermodalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+          <div class="modal-content">
+            <div class="modal-header justify-content-center position-relative border-0">
+              <h1 class="modal-title fs-35 fw-semibold fst-italic text-black lh-1 mb-0"><u>Manage Drivers</u></h1>
+              <button type="button" class="btn-close position-absolute top-0 end-0 m-0 mt-8 me-8" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body px-20">
+                <div class="d-flex justify-content-center align-items-center gap-40">
+                  <div class="notemodaldouble-body w-100">
+                    <p class="m-0 mb-4 mt-8 text-center text-primary fs-14 fw-bolder">Company</p>
+                    <div class="notesmodalbody border border-radius-2 p-16 h-auto">
+                      <div class="notemodal-discription-body d-flex align-items-center gap-10">
+                        <span class='d-inline-block'><i class="fa-solid fa-xmark text-primary fs-16"></i></span>
+                        <textarea type="text" class="form-control" id="discription" placeholder="Discription" row="1"></textarea>
+                        <span class="contact-add-icon"><img src="assets/image/contact-sidebar/add-icon.svg" alt="Add icon"></span>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="notemodaldouble-body w-100">
+                    <p class="m-0 mb-4 mt-8 text-center text-primary fs-14 fw-bolder">3rd Party</p>
+                    <div class="notesmodalbody border border-radius-2 p-16 h-auto">
+                        <div class="bottom-header-top d-flex flex-column align-items-center justify-content-center gap-16 py-6 px-40">
+                            <button class="btn btn-header-action border border-2 py-4 px-8 active" type="button">
+                                <div class="d-flex gap-6 align-items-center justify-content-between">
+                                    <div class="header-action-duration position-relative">
+                                        <div
+                                            class="header-action-duration-time d-flex align-items-start justify-content-between gap-10 mb-4 ps-20">
+                                            <span class="header-action-notification d-inline-flex position-relative mb-4"><img
+                                                    src="./assets/image/header/notification-icon.svg"
+                                                    class="w-100 h-100 object-fit-contain" decoding="async"> <span
+                                                    class="lh-1 py-3 px-5 fs-8 bg-danger text-white border-radius-circle d-inline-block position-absolute">2</span>
+                                            </span>
+                                            <div
+                                                class="header-action-duration-data d-flex justify-content-center align-items-center gap-6">
+                                                <p class="m-0">Duration</p> <span class="d-inline-block">2<sup>D</sup>
+                                                    14<sup>Hr</sup> 48<sup>Min</sup></span>
+                                            </div>
+                                            <!-- <div class="header-action-alert position-absolute start-0"><img src="./assets/image/header/Alert.svg" class="w-100 h-100 object-fit-contain" decoding="async"></div> -->
+                                        </div>
+                                        <div class="header-action-duration-title text-start">
+                                            <p class="m-0">Fairbanks CTB N. Production</p>
+                                        </div>
+                                    </div>
+                                    <div class="header-action-icon d-flex justify-content-center align-items-center"><img
+                                            src="./assets/image/header/truck.svg" class="w-100 h-100 object-fit-contain"
+                                            decoding="async"></div>
+                                    <div
+                                        class="header-action-number d-flex align-items-center justify-content-between gap-2 flex-column">
+                                        <span class="d-inline-block">1</span> <span class="d-inline-block">4</span>
+                                    </div>
+                                </div>
+                            </button>
+                            <button class="btn btn-header-action border border-2 py-4 px-8" type="button">
+                                <div class="d-flex gap-6 align-items-center justify-content-between">
+                                    <div class="header-action-duration position-relative">
+                                        <div
+                                            class="header-action-duration-time d-flex align-items-start justify-content-between gap-10 mb-4 ps-20">
+                                            <span class="header-action-notification d-inline-flex position-relative mb-4">
+                                                <!-- <img src="./assets/image/header/notification-icon.svg" class="w-100 h-100 object-fit-contain" decoding="async"> <span class="lh-1 py-3 px-5 fs-8 bg-danger text-white border-radius-circle d-inline-block position-absolute">2</span>  -->
+                                            </span>
+                                            <div
+                                                class="header-action-duration-data d-flex justify-content-center align-items-center gap-6">
+                                                <p class="m-0">Duration</p> <span class="d-inline-block">2<sup>D</sup>
+                                                    14<sup>Hr</sup> 48<sup>Min</sup></span>
+                                            </div>
+                                            <!-- <div class="header-action-alert position-absolute start-0"><img src="./assets/image/header/Alert.svg" class="w-100 h-100 object-fit-contain" decoding="async"></div> -->
+                                        </div>
+                                        <div class="header-action-duration-title text-start">
+                                            <p class="m-0">N. Production</p>
+                                        </div>
+                                    </div>
+                                    <div class="header-action-icon d-flex justify-content-center align-items-center"><img
+                                            src="./assets/image/header/truck.svg" class="w-100 h-100 object-fit-contain"
+                                            decoding="async"></div>
+                                    <div
+                                        class="header-action-number d-flex align-items-center justify-content-between gap-2 flex-column">
+                                        <span class="d-inline-block">2</span> <span class="d-inline-block">4</span>
+                                    </div>
+                                </div>
+                            </button>
+                            <button class="btn btn-header-action border border-2 py-4 px-8" type="button">
+                                <div class="d-flex gap-6 align-items-center justify-content-between">
+                                    <div class="header-action-duration position-relative">
+                                        <div
+                                            class="header-action-duration-time d-flex align-items-start justify-content-between gap-10 mb-4 ps-20">
+                                            <span class="header-action-notification d-inline-flex position-relative mb-4"><img
+                                                    src="./assets/image/header/notification-icon.svg"
+                                                    class="w-100 h-100 object-fit-contain" decoding="async"> <span
+                                                    class="lh-1 py-3 px-5 fs-8 bg-danger text-white border-radius-circle d-inline-block position-absolute">2</span>
+                                            </span>
+                                            <div
+                                                class="header-action-duration-data d-flex justify-content-center align-items-center gap-6">
+                                                <p class="m-0">Duration</p> <span class="d-inline-block">2<sup>D</sup>
+                                                    14<sup>Hr</sup> 48<sup>Min</sup></span>
+                                            </div>
+                                            <div class="header-action-alert position-absolute start-0"><img
+                                                    src="./assets/image/header/Alert.svg" class="w-100 h-100 object-fit-contain"
+                                                    decoding="async"></div>
+                                        </div>
+                                        <div class="header-action-duration-title text-start">
+                                            <p class="m-0">Raymond CTB</p>
+                                        </div>
+                                    </div>
+                                    <div class="header-action-icon d-flex justify-content-center align-items-center"><img
+                                            src="./assets/image/header/truck.svg" class="w-100 h-100 object-fit-contain"
+                                            decoding="async"></div>
+                                    <div
+                                        class="header-action-number d-flex align-items-center justify-content-between gap-2 flex-column">
+                                        <span class="d-inline-block">3</span> <span class="d-inline-block">4</span>
+                                    </div>
+                                </div>
+                            </button>
+                            <button class="btn btn-header-action border border-2 py-4 px-8" type="button">
+                                <div class="d-flex gap-6 align-items-center justify-content-between">
+                                    <div class="header-action-duration position-relative">
+                                        <div
+                                            class="header-action-duration-time d-flex align-items-start justify-content-between gap-10 mb-4 ps-20">
+                                            <span class="header-action-notification d-inline-flex position-relative mb-4"><img
+                                                    src="./assets/image/header/notification-icon.svg"
+                                                    class="w-100 h-100 object-fit-contain" decoding="async"> <span
+                                                    class="lh-1 py-3 px-5 fs-8 bg-danger text-white border-radius-circle d-inline-block position-absolute">2</span>
+                                            </span>
+                                            <div
+                                                class="header-action-duration-data d-flex justify-content-center align-items-center gap-6">
+                                                <p class="m-0">Duration</p> <span class="d-inline-block">2<sup>D</sup>
+                                                    14<sup>Hr</sup> 48<sup>Min</sup></span>
+                                            </div>
+                                            <div class="header-action-alert position-absolute start-0"><img
+                                                    src="./assets/image/header/Alert.svg" class="w-100 h-100 object-fit-contain"
+                                                    decoding="async"></div>
+                                        </div>
+                                        <div class="header-action-duration-title text-start">
+                                            <p class="m-0">Raymond CTB</p>
+                                        </div>
+                                    </div>
+                                    <div class="header-action-icon d-flex justify-content-center align-items-center"><img
+                                            src="./assets/image/header/truck.svg" class="w-100 h-100 object-fit-contain"
+                                            decoding="async"></div>
+                                    <div
+                                        class="header-action-number d-flex align-items-center justify-content-between gap-2 flex-column">
+                                        <span class="d-inline-block">2</span> <span class="d-inline-block">4</span>
+                                    </div>
+                                </div>
+                            </button>
+                        </div>
+                    </div>
+                  </div>
+                </div>
+            </div>
+            <div class="modal-footer gap-50 border-0 justify-content-center py-18">
+            </div>
+          </div>
+        </div>
+    </div>
+    <!-- Driver Btn modal End  -->
 
     <!-- JavaScript Files -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
